Fix: change font size and letter spacing in dictionary part on mobiles

--- a/css/style.css
+++ b/css/style.css
@@ -277,9 +277,16 @@ a {
 }
 
 #word-def {
-  letter-spacing: 2px;
-  font-size: 1.5rem;
+  letter-spacing: 1px;
+  font-size: 1rem;
   word-break: break-all;
+}
+
+@media screen and (min-width: 767.99px) {
+  #word-def {
+    letter-spacing: 2px;
+    font-size: 1.5rem;
+  }
 }
 
 .definitions {
